--- a/package.xml
+++ b/package.xml
@@ -18,6 +18,7 @@
 	<build_depend>sensor_msgs</build_depend>
 	<build_depend>cv_bridge</build_depend>
 	<build_depend>image_transport</build_depend>
+	<build_depend>message_generation</build_depend>
 	<run_depend>message_runtime</run_depend>
 	<run_depend>roscpp</run_depend>
 	<run_depend>std_msgs</run_depend>
